# valo

./: Cargo.toml  README.md  bootstrap.js  index.html  index_ts.bootstrap.js
.github/workflows/: build-and-publish.yml
src/: container.rs  extfn.rs  field.rs  lib.rs  particle.rs  vector.rs
www/: README.md  app.ts  frame.ts  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/config/: display.ts  field.ts
